fix: popup z-index

--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -50,7 +50,7 @@
   background-color: #fff;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  z-index: 1;
+  z-index: 2;
   border: 0;
 }
 
@@ -137,4 +137,5 @@
   left: 0;
   width: 100%;
   height: 100vh;
+z-index: 1;
 }
